syntax = "proto3";

package kv.v1alpha1;

import "google/protobuf/struct.proto";

service KVService {
    rpc Set(SetRequest) returns (SetResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message SetRequest {
    string key = 1;
    google.protobuf.Value value = 2;
}

message SetResponse {}

message GetRequest{
    string key = 1;
}

message GetResponse{
    string key = 1;
    google.protobuf.Value value = 2;
}

message DeleteRequest{
    string key = 1;
}
message DeleteResponse{}